--- a/src/version.rc
+++ b/src/version.rc
@@ -1,5 +1,4 @@
 #include <winver.h>
-#include <ntdef.h>
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION             1,0,0,0
@@ -14,14 +13,14 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-        VALUE "Comments",         "MiniDeen"
+        VALUE "Comments",         "Neo-MiniDeen"
         VALUE "CompanyName",      ""
-        VALUE "FileDescription",  "MiniDeen"
-        VALUE "FileVersion",      "@VERSION@"
-        VALUE "InternalName",     "MiniDeen"
-        VALUE "OriginalFilename", "MiniDeen.dll"
-        VALUE "ProductName",      "MiniDeen"
-        VALUE "ProductVersion",   "@VERSION@"
+        VALUE "FileDescription",  "Neo-MiniDeen"
+        VALUE "FileVersion",      "r6"
+        VALUE "InternalName",     "Neo-MiniDeen"
+        VALUE "OriginalFilename", "Neo-MiniDeen.dll"
+        VALUE "ProductName",      "Neo-MiniDeen"
+        VALUE "ProductVersion",   "r6"
         END
     END
     BLOCK "VarFileInfo"
